Fix prompt template.