@@ -1,5 +1,6 @@
 package dev.ervinszilagyi.config.llm;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -8,7 +9,8 @@ public record LlmConfig(String name,
                         OpenAiConfig openAiConfig,
                         BedrockConfig bedrockConfig) {
     public ModelConfig getDefaultConfig() {
-        List<ModelConfig> modelConfigs = List.of(anthropicConfig, openAiConfig, bedrockConfig);
+        // To allow null values here we should avoid using List.of
+        List<ModelConfig> modelConfigs = Arrays.asList(anthropicConfig, openAiConfig, bedrockConfig);
         return modelConfigs.stream().filter(Objects::nonNull).filter(ModelConfig::isDefault).findFirst().orElseThrow();
     }
 }
